--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+  <dependency>
+    <groupId>com.github.javadev</groupId>
+    <artifactId>underscore</artifactId>
+    <version>1.57</version>
+  </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
