--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
     <artifactId>json</artifactId>
     <version>20200518</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.2.16</version>
+</dependency>
+
 		
 	</dependencies>
 
